--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  
   <head>
     <meta charset="utf-8" />
     <title>MDN Games: Three.js demo</title>
@@ -13,6 +14,21 @@
         height: 100%;
       }
     </style>
+    <script type="importmap">
+  {
+    "imports": {
+      "three": "https://cdn.jsdelivr.net/npm/three@v0.170.0/build/three.module.js",
+      "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.170.0/examples/jsm/"
+    }
+  }
+</script>
+    import * as THREE from 'three';
+import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+
+const controls = new OrbitControls( camera, renderer.domElement );
+const loader = new GLTFLoader();
+    
   </head>
   <body>
     <script src="three.min.js"></script>
