--- a/index1.html
+++ b/index1.html
@@ -1,61 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  
-  <head>
-    <meta charset="utf-8" />
-    <title>MDN Games: Three.js demo</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-    <script type="importmap">
-  {
-    "imports": {
-      "three": "https://cdn.jsdelivr.net/npm/three@v0.170.0/build/three.module.js",
-      "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.170.0/examples/jsm/"
-    }
-  }
-</script>
-  </head>
-  <body>
-    <script type="module" src="/main.js"></script>
-    <script src="three.min.js"></script>
-    <script>
-      var WIDTH = window.innerWidth;
-      var HEIGHT = window.innerHeight;
-      /* весь наш JavaScript-код будет после этого комментария */
+	<head>
+		<meta charset="utf-8">
+		<title>My first three.js app</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+		<script type="module">
+			import * as THREE from 'https://cdn.jsdelivr.net/npm/three/build/three.module.js';
 
-      var renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(WIDTH, HEIGHT);
-      renderer.setClearColor(0xdddddd, 1);
-      document.body.appendChild(renderer.domElement);
+			const scene = new THREE.Scene();
+			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
-      var scene = new THREE.Scene();
+			const renderer = new THREE.WebGLRenderer();
+			renderer.setSize( window.innerWidth, window.innerHeight );
+			document.body.appendChild( renderer.domElement );
 
-      var camera = new THREE.PerspectiveCamera(70, WIDTH / HEIGHT);
-      camera.position.z = 50;
-      scene.add(camera);
+			const geometry = new THREE.BoxGeometry( 1, 1, 1 );
+			const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+			const cube = new THREE.Mesh( geometry, material );
+			scene.add( cube );
 
-      var boxGeometry = new THREE.BoxGeometry(10, 10, 10);
-      var basicMaterial = new THREE.MeshBasicMaterial({ color: 0x0095dd });
-      var cube = new THREE.Mesh(boxGeometry, basicMaterial);
+			camera.position.z = 5;
 
-      scene.add(cube);
-      cube.rotation.set(0.4, 0.2, 0);
+			function animate() {
+				requestAnimationFrame( animate );
 
-      
-function render() {
-  requestAnimationFrame(render);
-  renderer.render(scene, camera);
-}
-render();
+				cube.rotation.x += 0.01;
+				cube.rotation.y += 0.01;
 
-    </script>
-  </body>
+				renderer.render( scene, camera );
+			}
+
+			animate();
+		</script>
+	</body>
 </html>
