--- a/text.html
+++ b/text.html
@@ -10,7 +10,9 @@
 	<body>
 		<script type="module">
 			import * as THREE from 'https://cdn.jsdelivr.net/npm/three/build/three.module.js';
-      import { TextGeometry } from 'three/addons/geometries/TextGeometry.js';
+      
+			import { TextGeometry } from 'https://cdn.jsdelivr.net/npm/three/addons/geometries/TextGeometry.js';
+			import { FontLoader } from 'https://cdn.jsdelivr.net/npm/three/addons/loaders/FontLoader.js';
 
 			const renderer = new THREE.WebGLRenderer();
       renderer.setSize( window.innerWidth, window.innerHeight );
