--- a/text.html
+++ b/text.html
@@ -5,11 +5,21 @@
 		<title>Dottore</title>
 		<style>
 			body { margin: 0; }
+
+			#info {
+	position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
+}
 		</style>
 	</head>
 	<body>
+		<div id="info">Описание</div>
 		<script type="module">
-			import * as THREE from 'three';
+			import * as THREE from 'https://cdn.jsdelivr.net/npm/three/build/three.module.js';
       
 			import { TextGeometry } from 'three/addons/geometries/TextGeometry.js';
 			import { FontLoader } from 'three/addons/loaders/FontLoader.js';
@@ -23,25 +33,7 @@
       camera.lookAt( 0, 0, 0 );
 
       const scene = new THREE.Scene();
-
-			const loader = new FontLoader();
-
-      loader.load( 'fonts/helvetiker_regular.typeface.json', function ( font ) {
-
-	    const geometry = new TextGeometry( 'Hello three.js!', {
-		font: font,
-		size: 80,
-		depth: 5,
-		curveSegments: 12,
-		bevelEnabled: true,
-		bevelThickness: 10,
-		bevelSize: 8,
-		bevelOffset: 0,
-		bevelSegments: 5
-	} );
-} );
-
-			scene.add( geometry );
+			
 renderer.render( scene, camera );
 		</script>
 	</body>
